# Geant4-Shielding

./: .gitignore
Geant4-Shielding/: CMakeLists.txt  run.mac
Geant4-Shielding/include/: Analysis.hh  DetectorConstruction.hh  Run.hh
Geant4-Shielding/src/: DetectorConstruction.cc  RunAction.cc  SD1.cc  SD2.cc
